# stellarspend-contracts

./: .gitignore  Cargo.toml  README.md
contracts/batch-conversion/: Cargo.toml
contracts/batch-conversion/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/batch-history/: Cargo.toml
contracts/batch-history/src/: lib.rs  logic.rs  test.rs  types.rs
contracts/batch-notifications/: Cargo.toml
contracts/batch-notifications/src/: lib.rs  logic.rs  test.rs  types.rs
contracts/batch-payment/: Cargo.toml
contracts/batch-payment/src/: lib.rs  test.rs  types.rs
contracts/batch-transfer/: Cargo.toml
contracts/batch-transfer/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/batch-wallet-creation/: Cargo.toml
contracts/batch-wallet-creation/src/: test.rs  types.rs
contracts/batch-wallet-creation/test_snapshots/test/: test_batch_create_wallets_accumulates_stats.1.json  test_batch_create_wallets_empty_batch.1.json  test_batch_create_wallets_events_emitted.1.json  test_batch_create_wallets_large_batch.1.json  test_batch_create_wallets_multiple.1.json  test_batch_create_wallets_partial_failures.1.json  test_batch_create_wallets_single.1.json  test_batch_create_wallets_unauthorized.1.json  test_cannot_initialize_twice.1.json  test_initialize_contract.1.json  test_multiple_simultaneous_batch_creations.1.json  test_set_admin.1.json
contracts/budget-allocation/: Cargo.toml
contracts/budget-allocation/src/: lib.rs  test.rs  types.rs
contracts/budget-recommendations/src/: lib.rs  recommendations.rs  test.rs  (+2 more)
contracts/savings-goals/: Cargo.toml
(+47 files in other folders)
